myteo/test/analyze/type_check/binary_operation/add.myte
module Test

fun main() {
  // Non-erroring cases
  (1 + 1: Int);
  (1 + 2 + 3 + 4: Int);
  ("a" + "a": String);
  ("a" + "b" + "c" + "": String);

  // If only one type is addable error and type expression with that type
  (1 + true: Int);
  (true + "a": String);

  // If both types are addable but incompatible error and type expression with
  // left hand type.
  (1 + "a": Int);
  ("a" + 1: String);

  // If neither type is addable error on both sides but do not enforce type for expression
  (true + (): Int -> Int);
}